# Rustwitter

./: .gitignore  Cargo.toml
backend/: .env  Cargo.toml  setup.sql
backend/src/: env.rs  main.rs  middlewares.rs  responses.rs
backend/src/endpoints/: events.rs  me.rs  mod.rs  users.rs
backend/src/tests/: follows.rs  login.rs  logout.rs  mod.rs  posting.rs  test_utils.rs  timeline.rs  user_creation.rs  users.rs
frontend/: Cargo.toml
frontend/src/: api.rs  flash.rs  lib.rs  storage.rs
frontend/src/view/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  payloads.rs  responses.rs
