[package]
name = "backend"
version = "0.1.0"
authors = ["Geoff Donoghue <geoff.donoghue@mail.utoronto.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argonautica = "0.2.0"
assert-json-diff = "2.0.1"
async-std = { version = "1.8.0", features = ["attributes", "unstable"] }
chrono = "0.4.19"
dotenv = "0.15.0"
failure = "0.1.8"
futures = { version = "0.3.14", features = ["compat"] }
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
rand = "0.8.3"
rand_core = "0.6.2"
regex = "1.5.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.2", features = ["runtime-async-std-rustls", "macros", "chrono", "json", "postgres", "uuid"] }
thiserror = "1.0.24"
tide = "0.16.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
http-types = "2.11.1"
async-trait = "0.1.50"
shared = { path = "../shared" }
web3 = "0.16.0"
tokio = "1.7.1"

[dev-dependencies]
http-types = "2.11.1"
tide-testing = "0.1.3"
http-service = "0.4.0"
